--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ header {
 }
 
 header .logo img {
-    height: 50px;
+    height: 50px; /* Ajustez la taille du logo si nécessaire */
 }
 
 nav ul {
